# AI-Agentics-Bots

./: .gitignore  CLAUDE.md  README.md  centuary_budget_tracker.xlsx  gen_sheet.py
.github/workflows/: codeql.yml  genesis-chain.yml  genesis-release.yml  genesis-site.yml  release.yml
agents/bodhi-android/: settings.gradle
agents/bodhi-windows/: start-bodhi.bat
agents/category-agent-portfolio/: .env.example  README.md  go.mod  main.go  run-all.ps1
agents/fusion-ai/: .env.example  .gitignore  fusion-ai-metadata.json  go.mod  main.go  models.go  run-agent.ps1
agents/github-experts/: .gitignore  README.md  go.mod  main.go  main_test.go
agents/mobile-assistant-bot/: .env.example  README.md  go.mod  go.sum  main.go  mobile-assistant-bot-metadata.json  run-agent.ps1
agents/perpetual-market-strategist/: .env.example  README.md  agent-launch.ps1  go.mod  main.go  perpetual-market-strategist-metadata.json  perpetual-markets-strategist-ai-template.json  perpetual-markets-strategist-ai-v3-template.json  run-agent.ps1
agents/perpetual-markets-strategist-ai-v3/: README.md  (+5 more)
genesis/: .gitignore  README.md  STATUS.md
genesis/contracts/agent-registry/: .gitignore  Cargo.toml  README.md
genesis/contracts/agent-registry/proof/: README.md  agent.json  burned_total.json  params.json  task1.json
genesis/contracts/agent-registry/scripts/: deploy-local.sh  deploy-testnet.sh  devnet-up.sh
genesis/contracts/agent-registry/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
genesis/contracts/agent-registry/tests/: integration.rs
web/: README.md  index.html  server.py
(+212 files in other folders)
